feat: 收口MQ消息更新链路